[project]
name = "nclaw-uv"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy<2",
    "protobuf<=3.20.3",
    "warp-lang==0.6.1",
    "torch",
    "torchvision",
    "scipy>=1.15.3",
    "pyvista>=0.48.4",
    "hydra-core>=1.3.3",
    "trimesh>=4.12.2",
    "einops>=0.8.2",
    "tqdm>=4.68.3",
    "psutil>=7.2.2",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
